test/syc/bad/inlineextnotdef.c
/*
 * An function declared inline with external linkage must be
 * defined within the same translation unit.
 */

inline void finline(void);
